Fix hover styles on links for dark mode

--- a/modules/article-card/style.scss
+++ b/modules/article-card/style.scss
@@ -40,11 +40,6 @@
 	}
 }
 
-@media (prefers-color-scheme: dark) {
-	.card {
-		background-color: var(--background-light);
-	}
-}
 
 /*@media (min-width: 768px) {
 	article-card {
