--- a/pages/resume/style.scss
+++ b/pages/resume/style.scss
@@ -29,7 +29,6 @@
 .section-flex .inner-flex {
 	display: flex;
 	border-radius: var(--corners);
-	background-color: var(--background-light);
 	height: 100%;
 }
 
